# blueos-extension

./: Dockerfile  metadata.json
app/: main.py  pyproject.toml
app/static/: index.html  register_service
