[project]
name = "blueros-autonomous-mission"
version = "0.1.0"
description = "BlueROV2 Autonomous Mission Controller"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "litestar[standard]",
    "pymavlink",
    "numpy",
    "asyncio",
]
